[package]
name = "karac-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "karac_runtime"
# `staticlib` is the production artifact — `link_executable` in `karac`
# links the resulting `libkarac_runtime.a` into every compiled Kāra
# binary. `rlib` is added solely so the `karac` compiler crate can
# pull this crate in as an optional dep under the (opt-in, non-default)
# `lljit_prototype` feature, putting the runtime's `karac_*` symbols in
# the test binary's symbol table so the LLJIT process-symbol-search
# generator (per W1) can resolve them at JIT-link time.
#
# ⚠️  BUILD THE PRODUCTION STATICLIB WITH:
#         cargo rustc -p karac-runtime --release --crate-type staticlib
#     NOT `cargo build -p karac-runtime --release`.
#
# Why: under `lto = "fat"` (workspace `[profile.release]`), emitting BOTH
# `staticlib` and `rlib` in one `cargo build` invocation defeats the
# cross-module DCE that the staticlib relies on. The linker can no longer
# prove std's panic / alloc-error default hooks unreachable, so the full
# DWARF backtrace symbolizer (gimli + addr2line + object + rustc_demangle,
# ~57 KiB) survives `-dead_strip` into *every* AOT binary — even a pure
# compute program that never panics with a backtrace. Measured regression:
# the auto-par binary floor jumped 295.7 KiB → 417.7 KiB (+41%) the moment
# `rlib` was added (karac-rust 712d8f4d). `cargo rustc --crate-type
# staticlib` builds ONLY the staticlib, so fat-LTO + `-dead_strip` strip
# the symbolizer and the floor returns to ~295 KiB. The `rlib` stays
# declared here so the opt-in `lljit_prototype` test path still resolves;
# it is only ever materialized by `cargo {build,test} --features
# lljit_prototype`, never by the production staticlib build above.
#
# A clean default (so plain `cargo build` is also DCE-correct) would mean
# splitting the rlib core out into its own crate — tracked as a follow-up.
crate-type = ["staticlib", "rlib"]

[features]
# Test-only FFI surface for `tests/park_and_wake.rs`. Adds
# `karac_runtime_test_bind_and_print_port`, which binds a TCP socket
# on 127.0.0.1:0, prints `BOUND_PORT=<n>` to stdout, and returns the
# raw fd. Lets a kara binary exercise the parking primitive end-to-end
# without a real stdlib `TcpListener` (M1 work). Disabled by default;
# the test harness builds the runtime with `--features test-helpers`.
test-helpers = []

[dependencies]
# Slice F (`std.json`): backing impl for `karac_runtime_json_parse` /
# `karac_runtime_json_stringify`. Locked design choice (iii) — use
# serde_json via FFI rather than a hand-rolled Kāra parser. The
# `preserve_order` feature backs the `Map<_, _>` with `IndexMap` instead
# of `BTreeMap`, satisfying locked design choice (ii) — Json.Object
# iterates in input insertion order, not alphabetical.
serde_json = { version = "1", features = ["preserve_order"] }

# Slice B (`std.http` server, minimal): backing impl for
# `karac_runtime_serve_http`. Per locked design choice (ii) — hyper
# behind an FFI boundary, mirroring Slice F's serde_json pattern. HTTP/1
# only (locked design (i): no HTTP/2 negotiation tuning); `server`
# feature is what wires up the connection-acceptor + service driver.
hyper = { version = "1", features = ["server", "http1"] }
# `hyper-util` ships hyper 1's reusable server harness (`auto::Builder`,
# `TokioExecutor`, `TokioIo`); hyper 1 itself is just the protocol core.
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "http1"] }
# Tokio multi-thread runtime — locked design (iv): per-request hyper
# invokes the Kāra handler synchronously via `tokio::task::block_in_place`,
# which requires the multi-thread flavor.
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
# Adapter between the std `Future` type and hyper's Body trait — `http_body_util`
# ships `Full<Bytes>`, the trivial body type used for fixed-size responses.
http-body-util = "0.1"
bytes = "1"

# Phase 6 line 15 (`event_loop`): cross-platform fd-readiness primitives
# (epoll on Linux, kqueue on macOS / BSD, IOCP on Windows) plus the
# cross-thread `Waker` (eventfd / pipe pair / IOCP post). `mio` is the
# canonical Rust crate for this exact problem and already wraps all three
# OS substrates behind a single API. Already in our lockfile transitively
# through tokio; promoting to a direct dep so the substrate choice is
# explicit and the API surface is self-contained.
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }

# Phase 6 line 209 follow-on (M3 1M listen-backlog fix, 2026-05-29):
# `std::net::TcpListener::bind` passes an opaque small backlog (Rust std
# hardcodes 1024 on Unix; Linux caps further at `somaxconn`). At 1M idle
# the std default saturates well before all conns are held → SYN-cookie
# fallback + ~17% churn-timeout rate. `socket2` lets us pass an explicit
# `listen(backlog)`; we pass a large value (65535) and let the kernel
# cap at the system-tuned ceiling (`/proc/sys/net/core/somaxconn` on
# Linux, `kern.ipc.somaxconn` on BSD/macOS), which matches what large
# servers (nginx, envoy) use by convention. Already in the lockfile as
# a transitive dep via mio; promoting to a direct dep to use Socket API.
socket2 = "0.5"

# Phase 6 line 236 slice 1 (TLS / HTTPS server-side stdlib): rustls backs
# `runtime/src/tls.rs` — pure-Rust TLS implementation, no openssl link
# dependency. `default-features = false` strips out `aws_lc_rs` (heavy
# build, needs nasm) in favor of `ring`, which is what `ureq` already
# pulls into the lockfile via `rustls 0.23.39`. v1 surface keeps it
# minimal: `std` + `tls12` (broad client compat) + `ring` (crypto
# provider). Server-side configuration only; client auth + custom roots
# land additively when a real consumer needs them. `rustls-pemfile`
# parses the PEM bytes the FFI receives at `tls_config_new` into
# rustls's `CertificateDer` / `PrivateKeyDer` types.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"] }
rustls-pemfile = "2"
# Phase-8 std.http HTTPS serving (`Server.serve_tls` / `karac_runtime_serve_https`):
# tokio-rustls terminates TLS in front of hyper, wrapping each accepted
# `TcpStream` in a `TlsStream` whose AsyncRead/AsyncWrite halves feed
# hyper's `serve_connection`. Features mirror `rustls` above: `default-
# features = false` strips `aws_lc_rs`; `ring` matches the crypto
# provider `runtime/src/tls.rs` already installs.
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }

# Phase-8 std.http client codegen path (`Client.get` / `Client.post` /
# `karac_runtime_http_client_get` / `_post`): synchronous HTTP client.
# `tls` enables TLS support so `https://...` URLs work; ureq pulls
# rustls + `ring` provider (matches our `rustls = ".. features = ring"`
# above). No JSON / cookies / proxy features at v1 — minimal surface to
# back the get/post bodies. The interpreter path in the karac compiler
# crate uses ureq directly; the runtime mirrors it here so karac-built
# binaries get the same client behavior without dragging ureq into the
# generated binaries' direct dep set.
ureq = { version = "2", default-features = false, features = ["tls"] }
# Phase-8 line 48 (public-CA trust default): all 4 ureq client fetch
# sites (`_client_get` / `_post` / `_client_send` / `_builder_send`)
# route through a shared `ureq::Agent` whose rustls ClientConfig
# explicitly trusts `webpki_roots::TLS_SERVER_ROOTS` (Mozilla bundle).
# ureq's `tls` feature already pulls webpki-roots transitively, but
# pinning it as a direct dep + an explicit `with_root_certificates`
# call makes the v1 commitment load-bearing in our code: a future ureq
# default flip (e.g. to `rustls-native-certs`) cannot silently move us
# off the bundled-Mozilla-roots posture, and `Client.get("https://...")`
# keeps working on stripped images (Alpine / scratch / distroless)
# without a system CA bundle. Version pinned to match ureq 2.12.1's
# transitive choice — see Cargo.lock.
webpki-roots = "0.26"

[dev-dependencies]
# Hermetic test-cert generation for `src/tls.rs`'s unit tests. Slice 4
# of the TLS entry ships checked-in cert fixtures under
# `tests/fixtures/tls/`; until then, slice-1 round-trip / handshake-
# failure tests generate a fresh self-signed cert per test run via
# rcgen. `ring` feature so the dev-time crypto matches the prod
# provider rustls is built against here.
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "crypto"] }

# Note: the runtime's release-profile `panic = "abort"` setting lives in
# the workspace root `Cargo.toml` (cargo ignores `[profile.*]` in
# non-root manifests with a warning). See the workspace Cargo.toml's
# `[profile.release.package.karac-runtime]` block + the close-out under
# `docs/implementation_checklist/phase-7-codegen.md § "Phase 1
# binary-size optimization"` for context.
