[package]
name = "karac-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "karac_runtime"
# `staticlib` is the production artifact — `link_executable` in `karac`
# links the resulting `libkarac_runtime.a` into every compiled Kāra
# binary. `rlib` is added solely so the `karac` compiler crate can
# pull this crate in as an optional dep under the (opt-in, non-default)
# `lljit_prototype` feature, putting the runtime's `karac_*` symbols in
# the test binary's symbol table so the LLJIT process-symbol-search
# generator (per W1) can resolve them at JIT-link time.
#
# ⚠️  BUILD THE PRODUCTION STATICLIB WITH:
#         cargo rustc -p karac-runtime --release --crate-type staticlib
#     NOT `cargo build -p karac-runtime --release`.
#
# Why: under `lto = "fat"` (workspace `[profile.release]`), emitting BOTH
# `staticlib` and `rlib` in one `cargo build` invocation defeats the
# cross-module DCE that the staticlib relies on. The linker can no longer
# prove std's panic / alloc-error default hooks unreachable, so the full
# DWARF backtrace symbolizer (gimli + addr2line + object + rustc_demangle,
# ~57 KiB) survives `-dead_strip` into *every* AOT binary — even a pure
# compute program that never panics with a backtrace. Measured regression:
# the auto-par binary floor jumped 295.7 KiB → 417.7 KiB (+41%) the moment
# `rlib` was added (karac-rust 712d8f4d). `cargo rustc --crate-type
# staticlib` builds ONLY the staticlib, so fat-LTO + `-dead_strip` strip
# the symbolizer and the floor returns to ~295 KiB. The `rlib` stays
# declared here so the opt-in `lljit_prototype` test path still resolves;
# it is only ever materialized by `cargo {build,test} --features
# lljit_prototype`, never by the production staticlib build above.
#
# A clean default (so plain `cargo build` is also DCE-correct) would mean
# splitting the rlib core out into its own crate — tracked as a follow-up.
crate-type = ["staticlib", "rlib"]

[features]
# `default = ["tls", "net"]` so a plain `cargo build`/`cargo test` keeps the
# full runtime surface (HTTPS serving, the HTTP client, WS-over-TLS). The
# production AOT build emits FOUR archives: the full one (the default
# feature set), a lean one (`--no-default-features --features net`) for
# compute-only Kāra programs, and — phase-10 WASM build path — two wasm
# ones: sequential (`--no-default-features --target wasm32-wasip1`) with
# the whole native networking/scheduler surface compiled out, and
# threaded (`--no-default-features --features wasm-threads --target
# wasm32-wasip1-threads`) for the `--features wasm-threads` opt-in's
# dual-artifact build. See phase-7-codegen.md
# § "Phase 4 binary-size" — `rustls` + `ring` are the *only* deps whose
# unwind machinery survives `-dead_strip` onto a compute binary's shared
# panic/alloc path (+48.5 KiB, measured; tokio/hyper/mio/serde_json are all
# DCE-clean). Gating just the TLS surface behind `tls` lets the lean archive
# compile the rustls-pulling deps out entirely, recovering that ~48 KiB on
# every compute binary.
default = ["tls", "net"]

# Native networking + event-loop + scheduler surface: tokio/hyper HTTP
# serving, the mio event loop, TCP, WebSocket, and the spawn/TaskGroup
# scheduler (whose park/wake substrate lives in `event_loop.rs`). None of
# these deps compile on wasm32 (`mio`/`socket2` carry `compile_error!`s;
# tokio's `rt-multi-thread`/`net` features need OS threads + sockets), so
# the wasm runtime archive is built `--no-default-features` — phase-10
# `--target wasm_wasi` programs get vec/string/map/json/file/clone plus
# the *sequential* spawn/TaskGroup/par surface (`seq_scheduler.rs` +
# `seq_par_run`, cfg'd on `target_family = "wasm"` — phase-10 "WASM
# concurrency lowering — sequential default"), no native net. `tls`
# requires `net` (tokio-rustls wraps tokio streams).
net = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:tokio",
    "dep:http-body-util",
    "dep:bytes",
    "dep:mio",
    "dep:socket2",
    # SIGPIPE masking in the reactor's one-time init (`event_loop.rs`).
    "dep:libc",
]

# TLS surface: HTTPS server (`karac_runtime_serve_https`), the ureq-backed
# HTTP client, WS-over-TLS, and the `tls` module. Pulls the rustls/ring
# dependency tree. Disabling it (lean archive) drops those capabilities but
# keeps plain-HTTP serving, TCP, plain WebSocket, and JSON.
tls = [
    "net",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio-rustls",
    "dep:webpki-roots",
    "dep:ureq",
]

# Threaded wasm concurrency — phase-10 "WASM concurrency lowering —
# `--features wasm-threads` opt-in". Built ONLY into the threaded wasm
# archive (`cargo rustc -p karac-runtime --release --target
# wasm32-wasip1-threads --no-default-features --features wasm-threads
# --crate-type staticlib` → `libkarac_runtime_wasm_threads.a`). No deps:
# it widens the existing std-backed pool substrate's cfg gates in
# `lib.rs` (std::thread / Mutex / Condvar are real on
# wasm32-wasip1-threads — pthreads over the wasi-threads ABI,
# futex-backed atomics over shared memory) and compiles
# `wasm_threads_scheduler.rs` in place of `seq_scheduler.rs` for the
# spawn/TaskGroup extern surface. Never enabled on native builds (the
# cfg gates reduce to today's native arms) and never combined with
# `net` (the wasm archives are `--no-default-features`; tokio/mio don't
# build on wasm32).
wasm-threads = []

# Test-only FFI surface for `tests/park_and_wake.rs`. Adds
# `karac_runtime_test_bind_and_print_port`, which binds a TCP socket
# on 127.0.0.1:0, prints `BOUND_PORT=<n>` to stdout, and returns the
# raw fd. Lets a kara binary exercise the parking primitive end-to-end
# without a real stdlib `TcpListener` (M1 work). Disabled by default;
# the test harness builds the runtime with `--features test-helpers`.
test-helpers = ["net"]

# GPU compute backend — phase-10 GPU codegen, spike slice-0a
# (`docs/spikes/gpu-wgsl-slice0.md`). Opt-in ONLY: never in `default`, never
# in any production / wasm archive yet. Pulls `wgpu` (WGSL → native GPU API:
# Metal on macOS, Vulkan/DX12 elsewhere) + `pollster` (block_on for wgpu's
# async device init). Gating it here keeps the compute/auto-par binary floor
# and the wasm archives untouched while the runtime GPU spine is proven.
gpu = ["dep:wgpu", "dep:pollster"]

# Regex backend — codegen support for `runtime/stdlib/regex.kara`'s
# `Regex.compile` / `is_match` (B-2026-07-14-19). Opt-in ONLY, like `gpu`:
# never in `default` / lean / wasm archives. Pulls the `regex` crate (+
# regex-automata / regex-syntax / aho-corasick / memchr). Built into
# `libkarac_runtime_regex.a`, which `karac` selects only when the emitted
# object references a `karac_regex_*` symbol, so non-regex binaries never
# carry the dep.
regex = ["dep:regex"]

[dependencies]
# Slice F (`std.json`): backing impl for `karac_runtime_json_parse` /
# `karac_runtime_json_stringify`. Locked design choice (iii) — use
# serde_json via FFI rather than a hand-rolled Kāra parser. The
# `preserve_order` feature backs the `Map<_, _>` with `IndexMap` instead
# of `BTreeMap`, satisfying locked design choice (ii) — Json.Object
# iterates in input insertion order, not alphabetical.
serde_json = { version = "1", features = ["preserve_order"] }

# Slice B (`std.http` server, minimal): backing impl for
# `karac_runtime_serve_http`. Per locked design choice (ii) — hyper
# behind an FFI boundary, mirroring Slice F's serde_json pattern. As of
# phase-8 line 145, both `http1` and `http2` are enabled: the serve
# loops negotiate the protocol per-connection through `hyper-util`'s
# `auto::Builder` (ALPN `h2` over TLS, h2c prior-knowledge over plain
# TCP), falling back to HTTP/1.1. hyper/`h2` carry multiplexing, HPACK,
# flow control, and stream prioritization internally — the per-request
# `serve_request` bridge is protocol-agnostic, so the same handler path
# serves both. `server` wires up the connection-acceptor + service
# driver.
hyper = { version = "1", features = ["server", "http1", "http2"], optional = true }
# `hyper-util` ships hyper 1's reusable server harness (`auto::Builder`,
# `TokioExecutor`, `TokioIo`); hyper 1 itself is just the protocol core.
# `http2` is required for `auto::Builder` to drive the HTTP/2 path it
# negotiates.
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "http1", "http2"], optional = true }
# Tokio multi-thread runtime — locked design (iv): per-request hyper
# invokes the Kāra handler synchronously via `tokio::task::block_in_place`,
# which requires the multi-thread flavor. `time` powers the serve-loop
# handshake/header-read timeout (`tokio::time::timeout` + hyper's
# `TokioTimer`-backed `header_read_timeout`); `sync` powers the optional
# connection-concurrency cap (`tokio::sync::Semaphore`) — both phase-8
# line 124 (slowloris / unbounded-spawn hardening).
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "sync"], optional = true }
# Adapter between the std `Future` type and hyper's Body trait — `http_body_util`
# ships `Full<Bytes>`, the trivial body type used for fixed-size responses.
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }

# Phase 6 line 15 (`event_loop`): cross-platform fd-readiness primitives
# (epoll on Linux, kqueue on macOS / BSD, IOCP on Windows) plus the
# cross-thread `Waker` (eventfd / pipe pair / IOCP post). `mio` is the
# canonical Rust crate for this exact problem and already wraps all three
# OS substrates behind a single API. Already in our lockfile transitively
# through tokio; promoting to a direct dep so the substrate choice is
# explicit and the API surface is self-contained.
mio = { version = "1", features = ["os-poll", "os-ext", "net"], optional = true }

# Phase 6 line 209 follow-on (M3 1M listen-backlog fix, 2026-05-29):
# `std::net::TcpListener::bind` passes an opaque small backlog (Rust std
# hardcodes 1024 on Unix; Linux caps further at `somaxconn`). At 1M idle
# the std default saturates well before all conns are held → SYN-cookie
# fallback + ~17% churn-timeout rate. `socket2` lets us pass an explicit
# `listen(backlog)`; we pass a large value (65535) and let the kernel
# cap at the system-tuned ceiling (`/proc/sys/net/core/somaxconn` on
# Linux, `kern.ipc.somaxconn` on BSD/macOS), which matches what large
# servers (nginx, envoy) use by convention. Already in the lockfile as
# a transitive dep via mio; promoting to a direct dep to use Socket API.
socket2 = { version = "0.5", optional = true }

# SIGPIPE masking (`event_loop.rs` reactor init): a karac-compiled `main`
# bypasses Rust std's `lang_start`, so it never installs the `SIG_IGN` for
# SIGPIPE that every Rust program normally gets. Without it a socket write
# racing a peer close (reconnect storms) delivers SIGPIPE → silent process
# termination (exit 141). `libc::signal` is the one-line fix. Already in the
# lockfile transitively via mio/socket2/tokio; promoting to a direct (net-
# gated) dep. Net-only — the wasm archive (`--no-default-features`) never
# pulls it.
libc = { version = "0.2", optional = true }

# Phase 6 line 236 slice 1 (TLS / HTTPS server-side stdlib): rustls backs
# `runtime/src/tls.rs` — pure-Rust TLS implementation, no openssl link
# dependency. `default-features = false` strips out `aws_lc_rs` (heavy
# build, needs nasm) in favor of `ring`, which is what `ureq` already
# pulls into the lockfile via `rustls 0.23.39`. v1 surface keeps it
# minimal: `std` + `tls12` (broad client compat) + `ring` (crypto
# provider). Server-side configuration only; client auth + custom roots
# land additively when a real consumer needs them. `rustls-pemfile`
# parses the PEM bytes the FFI receives at `tls_config_new` into
# rustls's `CertificateDer` / `PrivateKeyDer` types.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"], optional = true }
rustls-pemfile = { version = "2", optional = true }
# Phase-8 std.http HTTPS serving (`Server.serve_tls` / `karac_runtime_serve_https`):
# tokio-rustls terminates TLS in front of hyper, wrapping each accepted
# `TcpStream` in a `TlsStream` whose AsyncRead/AsyncWrite halves feed
# hyper's `serve_connection`. Features mirror `rustls` above: `default-
# features = false` strips `aws_lc_rs`; `ring` matches the crypto
# provider `runtime/src/tls.rs` already installs.
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"], optional = true }

# Phase-8 std.http client codegen path (`Client.get` / `Client.post` /
# `karac_runtime_http_client_get` / `_post`): synchronous HTTP client.
# `tls` enables TLS support so `https://...` URLs work; ureq pulls
# rustls + `ring` provider (matches our `rustls = ".. features = ring"`
# above). No JSON / cookies / proxy features at v1 — minimal surface to
# back the get/post bodies. The interpreter path in the karac compiler
# crate uses ureq directly; the runtime mirrors it here so karac-built
# binaries get the same client behavior without dragging ureq into the
# generated binaries' direct dep set.
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
# Phase-8 line 48 (public-CA trust default): all 4 ureq client fetch
# sites (`_client_get` / `_post` / `_client_send` / `_builder_send`)
# route through a shared `ureq::Agent` whose rustls ClientConfig
# explicitly trusts `webpki_roots::TLS_SERVER_ROOTS` (Mozilla bundle).
# ureq's `tls` feature already pulls webpki-roots transitively, but
# pinning it as a direct dep + an explicit `with_root_certificates`
# call makes the v1 commitment load-bearing in our code: a future ureq
# default flip (e.g. to `rustls-native-certs`) cannot silently move us
# off the bundled-Mozilla-roots posture, and `Client.get("https://...")`
# keeps working on stripped images (Alpine / scratch / distroless)
# without a system CA bundle. Version pinned to match ureq 2.12.1's
# transitive choice — see Cargo.lock.
webpki-roots = { version = "0.26", optional = true }
wgpu = { version = "29.0.3", optional = true }
pollster = { version = "0.4.0", optional = true }
# Regex backend (opt-in `regex` feature → `libkarac_runtime_regex.a`). Same
# major as the top-level `regex` in the workspace `Cargo.toml`, so the
# interpreter (in-process) and the AOT runtime agree on match semantics.
regex = { version = "1", optional = true }

[dev-dependencies]
# Hermetic test-cert generation for `src/tls.rs`'s unit tests. Slice 4
# of the TLS entry ships checked-in cert fixtures under
# `tests/fixtures/tls/`; until then, slice-1 round-trip / handshake-
# failure tests generate a fresh self-signed cert per test run via
# rcgen. `ring` feature so the dev-time crypto matches the prod
# provider rustls is built against here.
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "crypto"] }

# Note: the runtime's release-profile `panic = "abort"` setting lives in
# the workspace root `Cargo.toml` (cargo ignores `[profile.*]` in
# non-root manifests with a warning). See the workspace Cargo.toml's
# `[profile.release.package.karac-runtime]` block + the close-out under
# `docs/implementation_checklist/phase-7-codegen.md § "Phase 1
# binary-size optimization"` for context.
