# Phase-10 v64 P0 — TLS-provider cross-compile gate (embedded / no_std).
#
# Compile-only probe for the bare-metal ARM Cortex-M leg
# (thumbv7em-none-eabihf). **Known-unsupported — this probe is expected
# to FAIL, and CI asserts exactly that** (the `tls-cross` cortex-m leg
# is a negative gate; see ci.yml). First CI observation (run
# 27048824708, 2026-06-06): the failure is NOT the toolchain/sysroot
# hypothesis this header originally documented — `gcc-arm-none-eabi`
# installs fine and headers resolve. ring 0.17's curve25519 assembly
# (crypto/curve25519/asm/x25519-asm-arm.S) is ARM-mode-only, and
# cortex-m is Thumb-only: `-mthumb` assembly of that file dies on
# `r13 not allowed here` / `Thumb does not support conditional
# execution`. No toolchain pin or container fixes an ISA mismatch.
#
# The crate stays in the workspace so the negative gate keeps testing
# the exact rustls/ring versions the runtime pins (shared root
# Cargo.lock): if a future ring (or provider swap) starts assembling
# for Thumb, the CI leg fails-on-success and prompts flipping to a real
# gate. Decision record + candidate providers (embedded-tls,
# rustls-rustcrypto): phase-10-targets.md § "Embedded TLS provider
# decision".
#
# What still holds from the original recipe: rustls 0.23 compiles
# no_std with `std` off, and getrandom `custom` covers entropy (a real
# embedded consumer registers its board TRNG via
# `getrandom::register_custom_getrandom!`). ring's C build is the only
# blocker. Local repro (needs arm-none-eabi-gcc, absent on stock
# macOS):
#   CC_thumbv7em_none_eabihf=arm-none-eabi-gcc \
#     cargo check -p karac-tls-cross-probe-embedded --target thumbv7em-none-eabihf

[package]
name = "karac-tls-cross-probe-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
# no_std rustls: same `tls12` + `ring` as the runtime, minus `std`/`logging`.
rustls = { version = "0.23", default-features = false, features = ["tls12", "ring"] }
getrandom = { version = "0.2", features = ["custom"] }
