# wasm_size bench — Rust "hello" crate. Standalone (detached from the karac
# workspace via the empty [workspace] table) so it builds with its own
# size-conscious release profile, the config a developer shipping to wasm uses.
[package]
name = "hello"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "hello"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
